Correct handling of overflowing category and track labels

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,6 +8,11 @@
 @import "../../node_modules/semantic-ui-transition/transition.min.css";
 @import "../lib/semantic-ui-range/range.css";
 
+/* padding so that track headers do not interfere with arrows */
+.up_pftv_track-header, .up_pftv_category-name {
+    padding-right: 25px;
+}
+
 .pv-inner-container {
     width: 100%;
     height: 100%;
